[gd_scene load_steps=3 format=3 uid="uid://d2mqrixkwb6ms"]

[ext_resource type="Script" path="res://create_account.gd" id="1_gam5d"]
[ext_resource type="PackedScene" uid="uid://df2a1o4dkpb7o" path="res://basic_auth.tscn" id="2_a6um0"]

[node name="CreateAccount" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gam5d")

[node name="Screen" type="ColorRect" parent="."]
custom_minimum_size = Vector2(250, 340)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.305882, 0.709804, 0.8, 1)

[node name="MarginContainer" type="MarginContainer" parent="Screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CREATE NEW ACCOUNT"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Screen/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LoginLabel" type="Label" parent="Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="LoginEdit" type="LineEdit" parent="Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
max_length = 20

[node name="PasswordLabel" type="Label" parent="Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Password"

[node name="PasswordEdit" type="LineEdit" parent="Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
secret = true

[node name="PasswordLabel2" type="Label" parent="Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Repeat password"

[node name="PasswordEdit2" type="LineEdit" parent="Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
secret = true

[node name="IncorrectLabel" type="Label" parent="Screen/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CreateButton" type="Button" parent="Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create account"

[node name="Button" type="Button" parent="Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel
"

[node name="BasicAuth" parent="." instance=ExtResource("2_a6um0")]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Screen/MarginContainer/VBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="Screen/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="logged_in" from="BasicAuth" to="." method="_on_basic_auth_logged_in"]
